# liseuse_BD_lastre_chollet

./: .gitignore  .gitmodules  .vscode  CMakeLists.txt  README.md
icons/: zoom-out.xpm
include/: app.h  bookmark.h  bookmarkitem.h  cbarchive.h  displaypanel.hpp  extract.hpp  extract.sh  frame.hpp  id.h  imagepanel.h  main.hpp  mainframe.hpp  mainwindow.h  menu.h  menu.hpp  param.h  shortcuts.h  toolbar.h  zip.h
res/: Blackhawkz.cbz  archive.cbz
res/icons/: arrow_left.xpm  arrow_right.xpm  cbreader_icon.xpm  zoom-in.xpm
src/: app.cpp  bookmark.cpp  bookmarkitem.cpp  cbarchive.cpp  displaypanel.cpp  extract.cpp  imagepanel.cpp  main.cpp  mainframe.cpp  mainwindow.cpp  menu.cpp  placeholder.cpp  shortcuts.cpp  toolbar.cpp  zip.cpp
